Archive2/26/2ffea286495826/output
main.cpp: In function 'int main()':
main.cpp:135:48: error: no matching function for call to 'MyString::MyString(MyString)'
 MyString SArray[4] = {"big","me","about","take"};
                                                ^
main.cpp:135:48: note: candidates are:
main.cpp:47:1: note: MyString::MyString(MyString&)
 MyString::MyString(MyString& a){
 ^
main.cpp:47:1: note:   no known conversion for argument 1 from 'MyString' to 'MyString&'
main.cpp:41:1: note: MyString::MyString()
 MyString::MyString(){
 ^
main.cpp:41:1: note:   candidate expects 0 arguments, 1 provided
main.cpp:27:1: note: MyString::MyString(const char*)
 MyString::MyString(const char* str){
 ^
main.cpp:27:1: note:   no known conversion for argument 1 from 'MyString' to 'const char*'
main.cpp:135:48: error: no matching function for call to 'MyString::MyString(MyString)'
 MyString SArray[4] = {"big","me","about","take"};
                                                ^
main.cpp:135:48: note: candidates are:
main.cpp:47:1: note: MyString::MyString(MyString&)
 MyString::MyString(MyString& a){
 ^
main.cpp:47:1: note:   no known conversion for argument 1 from 'MyString' to 'MyString&'
main.cpp:41:1: note: MyString::MyString()
 MyString::MyString(){
 ^
main.cpp:41:1: note:   candidate expects 0 arguments, 1 provided
main.cpp:27:1: note: MyString::MyString(const char*)
 MyString::MyString(const char* str){
 ^
main.cpp:27:1: note:   no known conversion for argument 1 from 'MyString' to 'const char*'
main.cpp:135:48: error: no matching function for call to 'MyString::MyString(MyString)'
 MyString SArray[4] = {"big","me","about","take"};
                                                ^
main.cpp:135:48: note: candidates are:
main.cpp:47:1: note: MyString::MyString(MyString&)
 MyString::MyString(MyString& a){
 ^
main.cpp:47:1: note:   no known conversion for argument 1 from 'MyString' to 'MyString&'
main.cpp:41:1: note: MyString::MyString()
 MyString::MyString(){
 ^
main.cpp:41:1: note:   candidate expects 0 arguments, 1 provided
main.cpp:27:1: note: MyString::MyString(const char*)
 MyString::MyString(const char* str){
 ^
main.cpp:27:1: note:   no known conversion for argument 1 from 'MyString' to 'const char*'
main.cpp:135:48: error: no matching function for call to 'MyString::MyString(MyString)'
 MyString SArray[4] = {"big","me","about","take"};
                                                ^
main.cpp:135:48: note: candidates are:
main.cpp:47:1: note: MyString::MyString(MyString&)
 MyString::MyString(MyString& a){
 ^
main.cpp:47:1: note:   no known conversion for argument 1 from 'MyString' to 'MyString&'
main.cpp:41:1: note: MyString::MyString()
 MyString::MyString(){
 ^
main.cpp:41:1: note:   candidate expects 0 arguments, 1 provided
main.cpp:27:1: note: MyString::MyString(const char*)
 MyString::MyString(const char* str){
 ^
main.cpp:27:1: note:   no known conversion for argument 1 from 'MyString' to 'const char*'
main.cpp:147:8: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
     s1 += "mnop";
        ^
main.cpp: In function 'int CompareString(const void*, const void*)':
main.cpp:131:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
